test/conformance/chainsaw/cli/apply/apply-maps-in-cluster-mode/policy.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: MutatingAdmissionPolicy
metadata:
  name: map-sample
spec:
  matchConstraints:
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["pods"]
      operations: ["CREATE"]
  mutations:
  - op: add
    path: "/metadata/labels/injected"
    value: "true"
