test/conformance/chainsaw/cli/apply/apply-maps-in-cluster-mode/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: default
  annotations:
    policies.kyverno.io/last-applied-patches: |
      skip
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
