test/conformance/chainsaw/cli/apply/apply-maps-in-cluster-mode/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: apply-maps-in-cluster-mode
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - script:
        content: kubectl apply -f resource.yaml
  - name: step-02
    try:
    - script:
        content: kyverno apply policy.yaml --cluster
        check:
          (contains($stdout, 'Mutation has been applied successfully.')): true
